[package]
name = "tribeslauncher"
version = "0.1.0"
authors = ["JosephSpearritt <joe.spearritt@live.com>"]
edition = "2018"

[dependencies]
winapi = { version = "0.3.6", features = ["winbase", "minwinbase", "tlhelp32", "fileapi", "winnt", "processthreadsapi", "handleapi", "libloaderapi", "memoryapi", "errhandlingapi"] }
treexml = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
reqwest = "0.9.10"
fs_extra = "1.1.0"